# polymarket-tracker

./: .env.example  .gitignore  PolymarketTracker.spec  README.md  build_exe.py  create_shortcut.ps1  pyproject.toml  requirements.txt  run_gui.py
docs/plans/: 2026-02-27-whale-signal-dashboard-design.md  2026-02-27-whale-signal-dashboard-plan.md
examples/: example_output.txt  win_rate_example_output.txt
polymarket_tracker/: __init__.py  alerts.py  analytics.py  api_client.py  collector.py  config.py  dashboard.py  database.py  export.py  gui.py  insider_dashboard.py  insider_detection.py  main.py  ml_detector.py  models.py  sample_data.py  signal_engine.py  utils.py  whale_profiler.py  win_rate.py  win_rate_dashboard.py
polymarket_tracker/web/: __init__.py  __main__.py  app.py
polymarket_tracker/web/static/: style.css
polymarket_tracker/web/templates/: base.html  index.html  market_detail.html  markets.html  whale_detail.html  whales.html
tests/: __init__.py  test_analytics.py  test_api_client.py  test_database.py  test_export.py  test_insider_detection.py  test_signal_engine.py  test_utils.py  test_whale_profiler.py  test_win_rate.py
